--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,5 @@
 <head>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
   <title>My Blog</title>
 </head>
 
